--- a/public/home.html
+++ b/public/home.html
@@ -13,6 +13,6 @@
         <button onclick="getRecipes()">Get Recipes</button>
         <div id="recipeResults"></div>
     </div>
-    <script src="index.js"></script>
+    <script src="/index.js"></script>
 </body>
 </html>
