--- a/public/home.html
+++ b/public/home.html
@@ -9,8 +9,9 @@
 <body>
     <div class="container">
         <h1>Pee Pee Poo Poo</h1>
+        <div id="authStatus"></div> <!-- Add this -->
         <input type="text" id="ingredientInput" placeholder="Enter an ingredient...">
-        <button onclick="getRecipes()">Get Recipes</button>
+        <button id="searchBtn" onclick="getRecipes()">Get Recipes</button>
         <div id="recipeResults"></div>
     </div>
     <script src="/index.js"></script>
