Change website title

--- a/public/home.html
+++ b/public/home.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Pee Pee Poo Poo</h1>
-        <div id="authStatus"></div> <!-- Add this -->
+        <h1>Recipe Generator</h1>
+        <div id="authStatus"></div>
         <input type="text" id="ingredientInput" placeholder="Enter an ingredient...">
         <button id="searchBtn" onclick="getRecipes()">Get Recipes</button>
         <div id="recipeResults"></div>
