fix index.js path on home.html

--- a/public/home.html
+++ b/public/home.html
@@ -39,6 +39,6 @@
   <script>
     const isLoggedIn = false; // Will be updated by index.js
   </script>
-  <script src="/index.js"></script>
+  <script src="/public/index.js"></script>
 </body>
 </html>
