--- a/public/home.html
+++ b/public/home.html
@@ -37,8 +37,8 @@
   </footer>
 
   <script>
-    const isLoggedIn = false; // Will be updated by index.js
+    const isLoggedIn = false;
   </script>
-  <script src="/public/index.js"></script>
+  <script src="/index.js"></script>
 </body>
 </html>
