--- a/public/home.html
+++ b/public/home.html
@@ -26,7 +26,7 @@
 
     <section class="search-section">
       <input type="text" id="ingredientInput" placeholder="e.g., chicken, broccoli..." />
-      <button id="searchBtn" onclick="getRecipes()">Get Recipes</button>
+      <button id="searchBtn">Get Recipes</button>
     </section>
 
     <section id="recipeResults" class="results"></section>
